# dockerGothicWebView

./: .gitignore  Dockerfile  pyproject.toml  readme.md
app/: auth.py  main.py
app/templates/: map.html
