[tool.poetry]
name = "dockergothicwebview"
version = "0.1.1"
description = "provides renderer for map data and endpoint to change data"
authors = ["Lester <l.ester@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
